# dusty

./: CLAUDE.md  Cargo.toml  README.md
crates/dusty/: Cargo.toml
crates/dusty-a11y/: Cargo.toml
crates/dusty-a11y/src/: error.rs  lib.rs  role.rs  tree.rs
crates/dusty-a11y/tests/: a11y_integration.rs
crates/dusty-core/: Cargo.toml
crates/dusty-core/src/: element.rs  error.rs  event.rs  lib.rs  node.rs  view.rs  view_seq.rs
crates/dusty-core/tests/: event_integration.rs  view_integration.rs
crates/dusty-devtools/: Cargo.toml
crates/dusty-devtools/src/: auditor.rs  error.rs  inspector.rs  lib.rs  profiler.rs
crates/dusty-devtools/tests/: auditor_tests.rs  inspector_tests.rs  profiler_tests.rs
crates/dusty-layout/: Cargo.toml
crates/dusty-layout/src/: convert.rs  error.rs  lib.rs  measure.rs  result.rs  tree.rs
crates/dusty-layout/tests/: layout_integration.rs
crates/dusty-macros/: Cargo.toml
crates/dusty-macros/src/: component.rs  error.rs  lib.rs  prop.rs
crates/dusty-macros/tests/: component_basic.rs  component_props.rs
crates/dusty-macros/tests/ui/: invalid_return.rs  invalid_return.stderr  missing_scope.rs  missing_scope.stderr
crates/dusty-platform/: Cargo.toml
crates/dusty-platform/src/: clipboard.rs  config.rs  convert.rs  error.rs  event.rs  key.rs  lib.rs  runner.rs  scale.rs
crates/dusty-platform/tests/: platform_integration.rs
crates/dusty-reactive/: Cargo.toml
crates/dusty-reactive/benches/: hot_paths.rs
crates/dusty-reactive/src/: batch.rs  effect.rs  error.rs  lib.rs  memo.rs  resource.rs  runtime.rs  scope.rs  signal.rs  stats.rs  subscriber.rs  tracking.rs
crates/dusty-reactive/tests/: batch_resource_integration.rs  edge_cases.rs  effect_integration.rs  memo_integration.rs  property_tests.rs  scope_integration.rs  signal_integration.rs
crates/dusty-render/: Cargo.toml
crates/dusty-render/src/: atlas.rs  clip.rs  command.rs  error.rs  glyph_cache.rs  gpu.rs  image_cache.rs  lib.rs  pipeline.rs  primitive.rs  renderer.rs  shader.rs  text_pipeline.rs  text_shader.rs  tree.rs
crates/dusty-render/tests/: clip.rs  draw_commands.rs  gpu_integration.rs
crates/dusty-style/: Cargo.toml
crates/dusty-style/src/: builder.rs  color.rs  corners.rs  edges.rs  font.rs  gradient.rs  lib.rs  palette.rs  shadow.rs  style.rs  theme.rs  tokens.rs
crates/dusty-style/tests/: builder_integration.rs  style_integration.rs  theme_integration.rs
crates/dusty-text/: Cargo.toml
crates/dusty-text/src/: convert.rs  error.rs  layout.rs  lib.rs  rasterize.rs  rich.rs  system.rs  truncate.rs
crates/dusty-text/tests/: integration.rs
crates/dusty-widgets/: Cargo.toml
crates/dusty-widgets/src/: button.rs  checkbox.rs  common.rs  divider.rs  error.rs  error_boundary.rs  for_each.rs  image.rs  lib.rs  macros.rs  match_view.rs  radio.rs  scroll_view.rs  show.rs  slider.rs  spacer.rs  suspense.rs  test_helpers.rs  text.rs  text_input.rs  toggle.rs
crates/dusty-widgets/src/canvas/: command.rs  frame.rs  mod.rs
crates/dusty-widgets/tests/: button.rs  canvas.rs  checkbox.rs  divider.rs  image.rs  radio.rs  slider.rs  text.rs  text_input.rs  toggle.rs
crates/dusty/examples/: counter.rs  dashboard.rs  form.rs  theme_showcase.rs  todo.rs
crates/dusty/src/: app.rs  error.rs  lib.rs  prelude.rs
crates/dusty/tests/: app_builder.rs  examples_compile.rs  facade_reexports.rs
docs/checklists/: audit-remediation.md  build.md
docs/design/: architecture.md  copy-handles.md  panicking-api.md
