[package]
name = "dusty-a11y"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Accessibility tree integration for Dusty"

[dependencies]
dusty-core = { path = "../dusty-core" }
dusty-style = { path = "../dusty-style" }
dusty-layout = { path = "../dusty-layout" }
accesskit = { workspace = true }

[dev-dependencies]
dusty-reactive = { path = "../dusty-reactive" }

[lints]
workspace = true
