[package]
name = "dusty-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "View trait, node types, and events for Dusty"

[dependencies]
dusty-reactive = { path = "../dusty-reactive" }

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true
