[package]
name = "dusty-devtools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Inspector and profiler for Dusty"

[dependencies]
dusty-core = { path = "../dusty-core" }
dusty-style = { path = "../dusty-style" }
dusty-layout = { path = "../dusty-layout" }
dusty-a11y = { path = "../dusty-a11y" }
dusty-reactive = { path = "../dusty-reactive", features = ["devtools"] }
accesskit = { workspace = true }

[lints]
workspace = true
