[package]
name = "dusty-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Windowing, input, and event loop for Dusty"

[lints]
workspace = true

[dependencies]
dusty-core = { path = "../dusty-core" }
winit = "0.30"
arboard = "3"

[dev-dependencies]
static_assertions = { workspace = true }
proptest = { workspace = true }
