[package]
name = "dusty-reactive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fine-grained reactive primitives for Dusty"

[dev-dependencies]
static_assertions = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false

[lints]
workspace = true
