[package]
name = "dusty-widgets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Built-in widget library for Dusty"

[dependencies]
dusty-reactive = { path = "../dusty-reactive" }
dusty-core = { path = "../dusty-core" }
dusty-style = { path = "../dusty-style" }

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true
